[metadata]
long_description = file: README.rst, CHANGES.rst
keywords = jtypes, jt, jpype, jep, pyjnius, jpy, javabridge, pyjava, jcc,
           py4j, jython, java, pythonjava, rubicon-java
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Natural Language :: Polish
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: Stackless
    Programming Language :: Python :: Implementation :: IronPython
    Programming Language :: Java
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Java Libraries

[options]
python_requires = >=2.7.0,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
setup_requires =
    setuptools>=40.7.3
install_requires =
    setuptools>=40.7.3
    jtypes.jni
    jtypes.jvm
namespace_packages = jt
packages = find:
package_dir =
    = src
    # jt.rubicon.tests = tests
zip_safe = True

[options.packages.find]
where = src

[options.package_data]
jt = rubicon.cfg

[options.extras_require]
doc =
    Sphinx>=2.0.1
test =
    unittest2;python_version<'3.0'
    mock>=2.0.0;python_version<'3.0'

[sdist]
formats = zip

[bdist_wheel]
universal = True

[build_sphinx]
source-dir = docs
build-dir = docs/_build
builder = html
all_files = True
warning-is-error = True
